# rust-simple-console-tool

./: Cargo.toml  README.md  text.txt
src/: main.rs
