[package]
name = "rust-simple-console-tool"
version = "0.1.0"
edition = "2021"
authors = ["encoderuz abduqodirxojiyev@gmail.com"]
license = "MIT"
description = "A tool for console"
readme = "README.md"
homepage = "https://github.com/encoderuz/rust-simple-console-tool"
repository = "https://github.com/encoderuz/rust-simple-console-tool"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
[dependencies]

clap = { version = "4.0", features = ["derive"] }
log = "0.4.21"
anyhow = "1.0.86"
indicatif = "0.17.8"